<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/consLayout"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.engineering.nhub.ancaps_project.SignUp"
    tools:showIn="@layout/activity_sign_up">

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="4dp"
        android:background="@color/black_overlay"
        app:layout_constraintBottom_toTopOf="@+id/tvTermsAndCondition"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/tvTermsAndCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/terms_and_cond"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/terms"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.504"/>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="420dp"
        android:layout_marginTop="64dp"
        android:orientation="vertical"
        android:paddingEnd="@dimen/padding_right"
        android:paddingLeft="@dimen/padding_left"
        android:paddingRight="@dimen/padding_right"
        android:paddingStart="@dimen/padding_left"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/etPhone"
            style="@style/FormTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/phone"
            android:drawablePadding="@dimen/margin_right"
            android:drawableStart="@drawable/phone"
            android:ems="10"
            android:hint="@string/phone_hint"
            android:inputType="phone"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/black_overlay" />


        <EditText
            android:id="@+id/etFirstName"
            style="@style/FormTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/user_icon"
            android:drawablePadding="@dimen/margin_right"
            android:drawableStart="@drawable/user_icon"
            android:ems="10"
            android:hint="@string/firstname_hint"
            android:inputType="textPersonName"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/black_overlay" />

        <EditText
            android:id="@+id/etLastName"
            style="@style/FormTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/user_icon"
            android:drawableStart="@drawable/user_icon"
            android:drawablePadding="@dimen/margin_right"
            android:ems="10"
            android:hint="@string/lastname_hint"
            android:inputType="textPersonName"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/black_overlay" />

        <EditText
            android:id="@+id/etPassword"
            style="@style/FormTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/lock"
            android:drawablePadding="@dimen/margin_right"
            android:drawableStart="@drawable/lock"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/black_overlay" />

        <EditText
            android:id="@+id/etEmail"
            style="@style/FormTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/icon_phone"
            android:drawablePadding="@dimen/margin_right"
            android:drawableStart="@drawable/icon_phone"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/black_overlay" />

        <EditText
            android:id="@+id/etCompanyName"
            style="@style/FormTextAppearance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/border"
            android:drawableLeft="@drawable/ic_company_name"
            android:drawablePadding="@dimen/margin_right"
            android:drawableStart="@drawable/ic_company_name"
            android:hint="@string/company_name"
            android:inputType="text"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/black_overlay" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/blue_rounded_corners_bg"
            android:text="@string/btn_sign_up"
            android:textAllCaps="true"
            android:textColor="@android:color/background_light"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/have_an_account_sign_in"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/login_font"
            android:textStyle="bold|italic" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
