<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/loginLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.engineering.nhub.ancaps_project.Login"
    tools:showIn="@layout/activity_login"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center"
        android:id="@+id/loginInnerLayout"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_gravity="center"
            app:srcCompat="@drawable/icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_left"
            android:paddingRight="@dimen/padding_right"
            android:id="@+id/linearLayout">

            <EditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size"
                android:layout_marginTop="16dp"
                android:background="@drawable/blue_border_button"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:drawableLeft="@drawable/icon_phone"
                android:drawablePadding="@dimen/margin_right"
                android:textColor="@color/colorPrimaryDark"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="@dimen/padding_right"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size"
                android:layout_marginTop="16dp"
                android:background="@drawable/blue_border_button"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:drawableLeft="@drawable/icon_password"
                android:drawablePadding="@dimen/margin_right"
                android:textColor="@color/colorPrimaryDark"
                android:paddingLeft="@dimen/padding_left"
                android:paddingRight="@dimen/padding_right"/>

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/tv_rememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rememberPassword"
                    android:textStyle="bold|italic"
                    />
                <CheckBox
                    android:id="@+id/checkbox_remMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    />

            </LinearLayout>
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/font_size"
                android:layout_marginTop="16dp"
                android:background="@drawable/blue_rounded_corners_bg"
                android:text="@string/btn_sign_in"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                />

            <TextView
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/etforgot_password"
                android:textStyle="bold|italic"
                android:text="@string/forgot_password"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
